lang/lc/tests/err_arg_type.sys
bool function foo(bool a)
{
	a
}

system zoo(bool b)
{
	b;
}

system main()
{
	system zoo Z(2);
	system zoo X;
	X(5);
	foo(3);
}
